@@ -2213,10 +2213,14 @@ probe syscall.seccomp = kernel.function("sys_seccomp").call ?
 {
 	name = "seccomp"
 	op = $op
+	op_str = _seccomp_op_str(op)
 	flags = $flags
-	flags_str = _seccomp_flags_str($flags)
+	flags_str = _seccomp_flags_str(flags)
+%( systemtap_v <= "2.9" %?
 	uargs = user_string_quoted($uargs)
-	argstr = sprintf("%u, %s, %s", $op, flags_str, user_string_quoted($uargs))
+%)
+	uargs_uaddr = $uargs
+	argstr = sprintf("%s, %s, %p", op_str, flags_str, uargs_uaddr)
 }
 probe syscall.seccomp.return = kernel.function("sys_seccomp").return ?
 {
