@@ -15,6 +15,8 @@
   version 2.9:
   - The '__int32_compat' library macro got deprecated in favor of
     new '__compat_long' library macro.
+  - The 'uargs' convenience variable of the 'seccomp' syscall probe
+    got deprecated in favor of new 'uargs_uaddr' variable.
 
 * What's new in version 2.8, 2015-06-17
 
